level 5 day 14 Q194 Group by department and sort employees by salary inside each group